# django-vue

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: admin.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py
backend/app/tests/: test_app.py
backend/src/: settings.py  urls.py
frontend/frontend/: Dockerfile  docker-compose.yml  package-lock.json
frontend/frontend/src/: App.vue  main.js
frontend/frontend/src/components/: MyForm.vue
frontend/frontend/src/views/: HomeView.vue
